Arquitectura Hexagonal (provisional) en AviationStackFeeder / Interfaces integradas en FlightController / Mappers actualizados / Algunos tests añadidos